@@ -8,8 +8,10 @@ apt (0.8.15.2) unstable; urgency=low
     - document available [options] for sources.list entries (Closes: 632441)
   * doc/apt.conf.5.xml:
     - document APT::Architectures list (Closes: #612102)
+  * cmdline/apt-get.cc:
+    - restore all important dependencies for garbage packages (LP: #806274)
 
- -- David Kalnischkies <kalnischkies@gmail.com>  Tue, 05 Jul 2011 15:31:55 +0200
+ -- David Kalnischkies <kalnischkies@gmail.com>  Wed, 06 Jul 2011 12:44:58 +0200
 
 apt (0.8.15.1) unstable; urgency=low
 
